@@ -8,17 +8,20 @@ import tech.edwyn.gmw.domain.model.Question;
 import tech.edwyn.gmw.domain.model.Score;
 import tech.edwyn.gmw.domain.model.User;
 import tech.edwyn.gmw.domain.store.UserStoreSpi;
-import tech.edwyn.gmw.infra.driven.store.entity.QuestionEntity;
-import tech.edwyn.gmw.infra.driven.store.entity.QuizEntity;
-import tech.edwyn.gmw.infra.driven.store.entity.UserEntity;
+import tech.edwyn.gmw.infra.driven.store.entity.*;
 import tech.edwyn.gmw.infra.driven.store.exception.GMWException;
 import tech.edwyn.gmw.infra.driven.store.mapper.UserMapper;
 import tech.edwyn.gmw.infra.driven.store.repository.QuestionRepository;
 import tech.edwyn.gmw.infra.driven.store.repository.QuizRepository;
+import tech.edwyn.gmw.infra.driven.store.repository.UserCorrectAnswerRepository;
 import tech.edwyn.gmw.infra.driven.store.repository.UserRepository;
 
+import java.sql.Date;
+import java.time.Instant;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -26,6 +29,7 @@ import static java.lang.String.format;
 @RequiredArgsConstructor
 public class UserStoreAdapter implements UserStoreSpi {
     private final UserRepository userRepository;
+    private final UserCorrectAnswerRepository userCorrectAnswerRepository;
     private final QuestionRepository questionRepository;
     private final QuizRepository quizRepository;
 
@@ -48,8 +52,10 @@ public class UserStoreAdapter implements UserStoreSpi {
         questionRepository.findById(questionId)
                 .ifPresent(question -> userRepository.findByEmail(email)
                         .ifPresent(user -> {
-                            user.getUserCorrectQuestions().add(question);
-                            userRepository.save(user);
+                            var userCorrectAnswer = new UserCorrectAnswerEntity(new UserCorrectAnswerId(), user, question, new Date(Instant.now().toEpochMilli()));
+                            user.getUserCorrectAnswers().add(userCorrectAnswer);
+                            question.getUserCorrectAnswers().add(userCorrectAnswer);
+                            userCorrectAnswerRepository.save(userCorrectAnswer);
                         })
                 );
     }
@@ -57,8 +63,8 @@ public class UserStoreAdapter implements UserStoreSpi {
     @Override
     public Score getScore(String email, Long quizId) {
         var scoreValue = userRepository.findByEmail(email)
-                .map(user -> user.getUserCorrectQuestions().stream()
-                        .filter(correctQuestion -> correctQuestion.getQuiz().getId().equals(quizId)).toList()
+                .map(user -> user.getUserCorrectAnswers().stream()
+                        .filter(correctQuestion -> correctQuestion.getQuestion().getQuiz().getId().equals(quizId)).toList()
                         .size())
                 .orElse(0);
         var maxScore = getMaxScore(quizId);
@@ -74,20 +80,19 @@ public class UserStoreAdapter implements UserStoreSpi {
     public List<Question> getSuccessfullyQuestions(String email, Long quizId) {
 
         return userRepository.findByEmail(email)
-                .map(UserEntity::getUserCorrectQuestions
-                ).orElseThrow().stream().
-                map(QuestionMapper::toDomain).toList();
+                .map(UserEntity::getUserCorrectAnswers)
+                .map(uca -> uca.stream().map(UserCorrectAnswerEntity::getQuestion).collect(Collectors.toList()))
+                .map(q -> q.stream().map(QuestionMapper::toDomain).collect(Collectors.toList()))
+                .get();
     }
 
     @Override
     public List<Long> getCompletedQuizIds(String email) {
         return userRepository.findByEmail(email)
-                .map(user -> user.getUserCorrectQuestions().stream()
-                        .map(QuestionEntity::getQuiz)
-                        .map(QuizEntity::getId)
-                        .distinct()
-                        .toList())
-                .orElse(Collections.emptyList());
+                .map(UserEntity::getUserCorrectAnswers)
+                .map(uca -> uca.stream().map(UserCorrectAnswerEntity::getQuestion).collect(Collectors.toList()))
+                .map(q -> q.stream().map(qu -> qu.getQuiz().getId()).collect(Collectors.toList()))
+                .stream().flatMap(Collection::stream).distinct().collect(Collectors.toList());
     }
 
     private int getMaxScore(Long quizId) {
